--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ A young boy experiences an unforgettable seaside summer on the Italian Riviera f
 endless scooter rides. Luca shares these adventures with his newfound best friend, but all the fun is
 threatened by a deeply-held secret: he is a sea monster from another world just below the ocean's surface.
 </p>
-</section> <!-- Закрывающий тег от left-block-content -->
-</section> <!-- Закрывающий тег от left-block -->
+</section>
+</section> 
 
 <section class="right-block">
 <h1>Popular New</h1>
@@ -81,9 +81,9 @@ threatened by a deeply-held secret: he is a sea monster from another world just 
 </section>
 
 </section>
-<!-- Закрывающий тег от right-block -->
+
 </div>
-<!-- Закрывающий тег от container -->
+
 
 </main>
 </body>
